--- a/wishlist.html
+++ b/wishlist.html
@@ -1,75 +1,83 @@
+<!-- wishlist.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Perfume Shelf</title>
-  <link rel="stylesheet" href="/static/css/styles.css" />
+  <title>Wishlist • Perfume Shelf</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+  <!-- Root-absolute paths ✅ -->
+  <link rel="stylesheet" href="/static/styles.css?v=9991" />
+  <script>window.PAGE_MODE = "wishlist";</script>
 </head>
-<body data-mode="wishlist">
-  <video class="lights-bg" autoplay muted loop playsinline>
-    <source src="/static/video/bg.mp4" type="video/mp4">
+
+<body>
+  <video class="lights-bg" autoplay muted loop playsinline preload="metadata">
+    <source src="/static/lights.mp4" type="video/mp4" />
   </video>
 
   <header class="site-header">
     <div class="site-header-inner">
       <a href="/" class="brand">
-        <span class="brand-word">My</span> <span class="brand-word strong">Perfume</span> Shelf
+        <span class="brand-word">My</span>
+        <span class="brand-word strong">Perfume</span>
+        <span class="brand-word">Shelf</span>
       </a>
+
       <nav class="global-nav">
         <ul>
-          <li><a href="/collection" data-link="collection">Collection</a></li>
+          <li><a href="/" data-link="collection">Collection</a></li>
           <li><a href="/wishlist" data-link="wishlist">Wishlist</a></li>
         </ul>
       </nav>
+
       <div class="header-actions">
-        <input id="search" type="text" placeholder="Search… (press / to focus)">
+        <input id="search" type="search"
+               placeholder="Search perfumes… (press / to focus)" autocomplete="off" />
         <label class="badge edit-toggle">
-          <input type="checkbox" id="editToggle">
+          <input id="editToggle" type="checkbox" />
           <span class="switch"><span class="knob"></span></span>
-          <span class="label">Edit Mode</span>
+          <span class="label">Edit mode</span>
         </label>
       </div>
     </div>
   </header>
 
   <main class="container">
-    <section class="panel">
-      <div id="grid" class="grid"></div>
-    </section>
     <form id="addForm" class="panel">
-      <input type="hidden" id="imgPath" name="img" />
-      <div>
-        <label>Name</label>
-        <input type="text" name="name" required />
+      <input name="name" placeholder="Name" required />
+      <input name="brand" placeholder="Brand" required />
+      <input name="price" placeholder="Price (optional)" />
+      <input name="img" id="imgPath" placeholder="Image path (auto-filled when you upload)" />
+      <input type="file" id="imgFile" accept=".jpg,.jpeg,.png,.webp,.heic,.heif,.avif" />
+      <div class="preview hidden" id="imgPreviewWrap">
+        <img id="imgPreview" alt="Preview" />
       </div>
-      <div>
-        <label>Brand</label>
-        <input type="text" name="brand" required />
-      </div>
-      <div>
-        <label>Price</label>
-        <input type="text" name="price" />
-      </div>
-      <div>
-        <label>Notes</label>
-        <textarea name="notes"></textarea>
-      </div>
-      <div>
-        <label>Image</label>
-        <input type="file" id="imgFile" accept="image/*" />
-      </div>
-      <div id="imgPreviewWrap" class="preview hidden">
-        <img id="imgPreview" alt="Preview">
-      </div>
-      <button type="submit">Save</button>
+      <input name="notes" placeholder="Notes (optional)" />
+      <button type="submit" class="badge">Add / Update</button>
     </form>
+
+    <div id="grid" class="grid"></div>
   </main>
 
+  <!-- Root-absolute path ✅ -->
+  <script src="/static/app.js?v=11" defer></script>
+
+
   <div id="zoomBox" class="zoom"></div>
+
   <script>
-    window.PAGE_MODE = "wishlist";
+    (function(){
+      const mode = (window.PAGE_MODE === "wishlist") ? "wishlist" : "collection";
+      document.querySelectorAll('a[href="/"], a[href="/wishlist"]').forEach(a=>{
+        const isCollection = a.getAttribute('href') === '/';
+        const isWishlist   = a.getAttribute('href') === '/wishlist';
+        a.classList.toggle('active',
+          (mode === 'collection' && isCollection) ||
+          (mode === 'wishlist' && isWishlist)
+        );
+      });
+    })();
   </script>
-  <script src="/static/js/app.js"></script>
 </body>
 </html>
