--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </header>
 
   <main class="container">
-    <form id="addForm" class="panel">
+    <form id="addForm" class="panel edit-only">
       <input name="name"  placeholder="Name"  required />
       <input name="brand" placeholder="Brand" required />
       <input name="price" placeholder="Price (optional)" />
