logo fix and cache error fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Root-absolute paths ✅ -->
-  <link rel="stylesheet" href="/static/styles.css?v=9991" />
+  <link rel="stylesheet" href="/static/styles.css" />
+
 </head>
 
 <body>
@@ -32,7 +33,7 @@
 
       <div class="header-actions">
         <input id="search" type="search"
-               placeholder="Search perfumes… (press / to focus)" autocomplete="off" />
+               placeholder="Search perfumes… (press / to focus)" autocomplete="on" />
         <label class="badge edit-toggle">
           <input id="editToggle" type="checkbox" />
           <span class="switch"><span class="knob"></span></span>
@@ -60,7 +61,7 @@
   </main>
 
   <!-- Root-absolute path ✅ -->
-  <script src="/static/app.js?v=11" defer></script>
+  <script src="/static/app.js" defer></script>
 
   <div id="zoomBox" class="zoom"></div>
 
