--- a/wishlist.html
+++ b/wishlist.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Root-absolute paths ✅ -->
-  <link rel="stylesheet" href="/static/styles.css?v=9991" />
+  <link rel="stylesheet" href="/static/styles.css" />
+
+
   <script>window.PAGE_MODE = "wishlist";</script>
 </head>
 
@@ -61,7 +63,7 @@
   </main>
 
   <!-- Root-absolute path ✅ -->
-  <script src="/static/app.js?v=11" defer></script>
+  <script src="/static/app.js" defer></script>
 
 
   <div id="zoomBox" class="zoom"></div>
