decent login authorization system

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <span class="brand-word strong">Perfume</span>
         <span class="brand-word">Shelf</span>
       </a>
+      
+
 
       <nav class="global-nav">
         <ul>
@@ -39,8 +41,10 @@
           <span class="switch"><span class="knob"></span></span>
           <span class="label">Edit mode</span>
         </label>
+        <button class="badge" id="logoutBtn" type="button">Logout</button>
       </div>
     </div>
+    
   </header>
 
   <main class="container">
