--- a/wishlist.html
+++ b/wishlist.html
@@ -19,6 +19,7 @@
   </video>
 
   <header class="site-header">
+    
     <div class="site-header-inner">
       <a href="/" class="brand">
         <span class="brand-word">My</span>
@@ -41,6 +42,7 @@
           <span class="switch"><span class="knob"></span></span>
           <span class="label">Edit mode</span>
         </label>
+        <button class="badge" id="logoutBtn" type="button">Logout</button>
       </div>
     </div>
   </header>
