--- a/wishlist.html
+++ b/wishlist.html
@@ -103,6 +103,20 @@
     </form>
   </div>
 </div>
+<!-- Confirm Modal -->
+<div id="confirmModal" class="modal hidden" aria-hidden="true">
+  <div class="modal-content" role="dialog" aria-modal="true" aria-labelledby="confirmTitle">
+    <h2 id="confirmTitle">Confirm</h2>
+    <p id="confirmMessage" style="margin:.5rem 0 1rem;color:#ddd;">Are you sure?</p>
+    <div class="modal-actions">
+      <button type="button" id="confirmCancel" class="badge secondary">Cancel</button>
+      <button type="button" id="confirmOk" class="badge">Yes</button>
+    </div>
+  </div>
+</div>
+
+<!-- Toasts -->
+<div id="toastHost" class="toast-host"></div>
 
 
 </body>
